--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.lovera.diego.restock"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,15 +20,20 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
-    implementation 'com.facebook.android:facebook-login:[4,5)'
+    implementation 'com.android.support:design:27.1.0'
+    implementation "com.android.support:cardview-v7:27.1.0"
+    implementation "com.android.support:customtabs:27.1.0"
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.facebook.android:facebook-login:4.31.0'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.android.support:support-annotations:27.1.0'
+    implementation 'com.android.support:support-annotations:27.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 
