--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,6 @@ android {
 }
 
 dependencies {
-
-    compile 'com.google.firebase:firebase-database:12.0.1'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -32,15 +29,12 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.31.0'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:support-annotations:27.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
