Dialog y cargada de imagenes para productos agregados, activities agregadas para la nav var, iconos y recursos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity
             android:name=".LandingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
