--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,11 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.31.0'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
