--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,19 +50,24 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".ProfileInformationActivity" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_login"/>
+        <activity android:name=".SignUpActivity"
+            android:label="@string/title_activity_sign_up"/>
+        <activity android:name=".ProfileInformationActivity"
+            android:label="@string/title_activity_profile_information" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/activity_main_title"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LandingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".HistoryActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".CartActivity" />
+        <activity android:name=".HistoryActivity"
+            android:label="@string/title_activity_history"/>
+        <activity android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".CartActivity"
+            android:label="@string/title_activity_cart" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
