--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".RestockApp"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".RestockApp"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <meta-data
@@ -50,11 +54,13 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/title_activity_login"/>
-        <activity android:name=".SignUpActivity"
-            android:label="@string/title_activity_sign_up"/>
-        <activity android:name=".ProfileInformationActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SignUpActivity"
+            android:label="@string/title_activity_sign_up" />
+        <activity
+            android:name=".ProfileInformationActivity"
             android:label="@string/title_activity_profile_information" />
         <activity
             android:name=".MainActivity"
@@ -62,11 +68,14 @@
         <activity
             android:name=".LandingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".HistoryActivity"
-            android:label="@string/title_activity_history"/>
-        <activity android:name=".SettingsActivity"
+        <activity
+            android:name=".HistoryActivity"
+            android:label="@string/title_activity_history" />
+        <activity
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".CartActivity"
+        <activity
+            android:name=".CartActivity"
             android:label="@string/title_activity_cart" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -86,10 +95,11 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".PaymentActivity" />
 
-        <service android:name=".FirebaseHelper"
+        <service
+            android:name=".FirebaseHelper"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
     </application>
